--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build": "npm run clean && webpack",
-    "serve": "webpack-dev-server"
+    "build": "NODE_ENV=production npm run clean && webpack -p",
+    "serve": "webpack-dev-server",
+    "deploy": "npm run build && git subtree push --prefix dist origin gh-pages"
   },
   "repository": "https://github.com/StephenGrider/WebpackProject",
   "author": "",
@@ -21,7 +22,8 @@
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "redux-form": "^6.3.2",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "surge": "^0.21.7"
   },
   "devDependencies": {
     "babel-core": "^6.17.0",
